    assignment). (Nikita)

- COM:
  . Fixed bug #48585 (com_load_typelib holds reference, fails on second call).
    (cmb)

- Gettext:
  . Fixed bug #70574 (Tests fail due to relying on Linux fallback behavior for
    gettext()). (Florian Engelhardt)

- LDAP:
  . Fixed memory leaks. (ptomulik)

- OPcache:
  . Fixed bug #73060 (php failed with error after temp folder cleaned up).
    (cmb)

- Standard:
  . Fixed bug #79930 (array_merge_recursive() crashes when called with array
    with single reference). (Nikita)
  . Fixed bug #79944 (getmxrr always returns true on Alpine linux). (Nikita)
  . Fixed bug #79951 (Memory leak in str_replace of empty string). (Nikita)

- XML:
  . Fixed bug #79922 (Crash after multiple calls to xml_parser_free()). (cmb)

06 Aug 2020, PHP 7.4.9

- Apache:
  . Fixed bug #79030 (Upgrade apache2handler's php_apache_sapi_get_request_time
    to return usec). (Herbert256)

- COM:
  . Fixed bug #63208 (BSTR to PHP string conversion not binary safe). (cmb)
  . Fixed bug #63527 (DCOM does not work with Username, Password parameter).
    (cmb)

- Core:
  . Fixed bug #79877 (getimagesize function silently truncates after a null 
    byte) (cmb)
  . Fixed bug #79740 (serialize() and unserialize() methods can not be called
    statically). (Nikita)
  . Fixed bug #79783 (Segfault in php_str_replace_common). (Nikita)
  . Fixed bug #79778 (Assertion failure if dumping closure with unresolved
    static variable). (Nikita)
  . Fixed bug #79779 (Assertion failure when assigning property of string
    offset by reference). (Nikita)
  . Fixed bug #79792 (HT iterators not removed if empty array is destroyed).
    (Nikita)
  . Fixed bug #78598 (Changing array during undef index RW error segfaults).
    (Nikita)
  . Fixed bug #79784 (Use after free if changing array during undef var during
    array write fetch). (Nikita)
  . Fixed bug #79793 (Use after free if string used in undefined index warning
    is changed). (Nikita)